--- a/imageAnimation.html
+++ b/imageAnimation.html
@@ -39,7 +39,7 @@ setTimeout("begin()", 700);
     
 <body>
 <center>
-<h1>this is a flamango website</h1>
+<h1>this is a flamingo website</h1>
 <img id="myPic" src="images/imgAnim/img0.jpg" width="700"/>
 
 <br/><br/>
