--- a/imageAnimation.html
+++ b/imageAnimation.html
@@ -2,17 +2,17 @@
 <head>
     
 <script language="JavaScript">
-var srcList = ["images/imgAnim/img0.jpg", 
-               "images/imgAnim/img1.jpg", 
-               "images/imgAnim/img2.jpg", 
-               "images/imgAnim/img3.jpg",  
-               "images/imgAnim/img4.jpg",  
-               "images/imgAnim/img5.jpg",  
-               "images/imgAnim/img6.jpg",  
-               "images/imgAnim/img7.jpg",
-               "images/imgAnim/img8.jpg",
-               "images/imgAnim/img9.jpg",
-               "images/imgAnim/img10.jpg" ];		   
+var srcList = ["images/images/imgAnim/img0.jpg", 
+               "images/images/imgAnim/img1.jpg", 
+               "images/images/imgAnim/img2.jpg", 
+               "images/images/imgAnim/img3.jpg",  
+               "images/images/imgAnim/img4.jpg",  
+               "images/images/imgAnim/img5.jpg",  
+               "images/images/imgAnim/img6.jpg",  
+               "images/images/imgAnim/img7.jpg",
+               "images/images/imgAnim/img8.jpg",
+               "images/images/imgAnim/img9.jpg",
+               "images/images/imgAnim/img10.jpg" ];		   
 var index = 0;
 var loopCount = 0;
 
@@ -40,7 +40,7 @@ setTimeout("begin()", 700);
 <body>
 <center>
 <h1>this is a flamingo website</h1>
-<img id="myPic" src="images/imgAnim/img0.jpg" width="700"/>
+<img id="myPic" src="images/images/imgAnim/img0.jpg" width="700"/>
 
 <br/><br/>
 <input type="button" value="Start!" onclick="begin()">
